--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Motion Sensor</title>
+    <title>Couter Tracker</title>
   </head>
   <body>
     <header class="mainContainer">
       <div class="headerWrapper">
         <div class="title">
-          <h2>Motion Sensor</h2>
+          <h2>Couter Tracker</h2>
           <p>application</p>
         </div>
         <div class="counterElementView">
@@ -18,17 +18,17 @@
         </div>
         <div class="content">
           <div class="btn-container">
-            <button id="increase-btn">SENSOR</button>
-            <button id="decrease-btn">LEAVE</button>
+            <button id="increase-btn">INCREASE</button>
+            <button id="decrease-btn">DECREASE</button>
             <button id="total-btn">SAVE ENTRY</button>
           </div>
           <div class="record-container">
             <div class="interval-container">
-              <h5>Images Taken:</h5>
+              <h5>tracked:</h5>
               <p id="record-el"></p>
             </div>
             <div class="total-captured-container">
-              <h5>Total Captured:</h5>
+              <h5>Total tracked:</h5>
               <p id="output-el"></p>
             </div>
           </div>
